--- a/src/app/post-data/post-data.component.html
+++ b/src/app/post-data/post-data.component.html
@@ -46,7 +46,7 @@
             </header>
 
             <!-- <form action="#" class="commenting-form"> -->
-            <form class="commenting-form">
+            <form (ngSubmit)="submitComment()" class="commenting-form">
                 <div class="row">
                     <div class="form-group col-md-12">
                         <input type="text" name="username" id="username" placeholder="Name" class="form-control"
